# openframe

./: .env.example  .gitignore  LICENSE  README.md  _index.json  bash.exe.stackdump  package-lock.json  package.json
.claude/: settings.local.json
backend/: README.md  pyproject.toml
backend/src/openframe_backend/: __init__.py  config.py  exceptions.py  main.py
backend/src/openframe_backend/api/: dependencies.py  routes_camera.py  routes_capture.py  routes_health.py  routes_media.py  routes_projects.py  schemas.py
backend/src/openframe_backend/camera/: __init__.py  canon_5d_mark_ii.py  digicamcontrol.py  mock.py  registry.py  session.py
backend/src/openframe_backend/domain/: __init__.py  models.py  ports.py
backend/src/openframe_backend/services/: __init__.py  capture_service.py  project_service.py
backend/src/openframe_backend/storage/: __init__.py  project_store.py
backend/tests/: test_project_store.py
docs/: ARCHITECTURE.md  CANON_5D_MARK_II.md  ROADMAP.md
electron/: package.json
electron/src/: main.ts  preload.ts
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  global.d.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CaptureWorkspace.tsx  DeleteProjectDialog.tsx  FrameStrip.tsx  LiveView.tsx  Modal.tsx  NewProjectDialog.tsx  OnionSkinControls.tsx  OpenProjectDialog.tsx  ProjectMenu.tsx  TopBar.tsx
scripts/: dev.mjs
